# motif

./: .gitignore  CLAUDE.md  README.md  commands.md  main.py  pyproject.toml
.cursor/rules/: hydra-configs.mdc  motif-project.mdc  python-motif.mdc  scripts-entrypoints.mdc
configs/: eval.yaml  make_predictions.yaml  notebooks.yaml  preproc.yaml  test.yaml  train.yaml
configs/data_augmentation/: affine_flip.yaml  dt_only.yaml  era5_cropping.yaml  era5_recentering.yaml  none.yaml  random_cropping.yaml
configs/dataset/: default.yaml
configs/eval_class/: dist_to_center.yaml  embeddings.yaml  fm_traj.yaml  footprint_map.yaml  quantitative.yaml  sources.yaml  spectrum.yaml  visual.yaml
configs/experiment/: denoiser_pmw_direct.yaml  denoiser_pmw_direct_dt1.yaml  denoiser_pmw_direct_reg.yaml  det_EPI.yaml  det_PI.yaml  det_all_sources.yaml  det_era5.yaml  det_era5_pmw.yaml  det_era5_pmw_ir.yaml  det_gmi_radar.yaml  det_gpm.yaml  det_pmw.yaml  det_pmw_gpm.yaml  diff_37GHz.yaml  diff_37GHz_cfg.yaml  diff_37GHz_residual.yaml  diff_89GHz.yaml  diff_all_sources.yaml  diff_gmi_radar.yaml  diff_pmw.yaml  diff_pmw_direct.yaml  diff_pmw_direct_dt1.yaml  diff_pmw_dt1.yaml  diff_pmw_gpm.yaml  diff_pmw_radar.yaml  diff_pmw_residual.yaml  diff_ssmis.yaml  diff_ssmis_regular.yaml  fm_gpm_residual.yaml  fm_pmw.yaml  fm_ssl_IM_w6h.yaml  fm_ssl_I_w6h.yaml  fm_ssl_M_w6h.yaml  fm_sup_IM_w6h.yaml
configs/inference_cfg/: det_gpm_PI_dt6.yaml  det_gpm_PI_dt6_past.yaml  det_gpm_dt1.yaml  dt1.yaml  dt1_max2.yaml  dt6_max2.yaml  fm.yaml  fm_cfg.yaml  fm_gpm_PI_dt6.yaml  fm_gpm_PI_dt6_past.yaml  fm_gpm_dt1.yaml  fm_gpm_dt1_multi.yaml  fm_gpm_dt1_multi_keep_one.yaml  fm_gpm_dt1_single_source.yaml  fm_gpm_dt6.yaml  gpm_dt1.yaml  gpm_dt6.yaml  min3.yaml  min3_max2.yaml  min4.yaml  min4_max2.yaml  pmw_ssl.yaml  pmw_ssl_min3.yaml  pmw_ssl_min3_max2.yaml
configs/lightning_module/: deterministic.yaml  flow_matching.yaml  fm_denoiser.yaml
configs/lr_scheduler/: cosine_warmup_100epochs.yaml  cosine_warmup_100epochs_higher_min.yaml  cosine_warmup_150epochs.yaml  cosine_warmup_150kiterations.yaml  cosine_warmup_150ksteps.yaml  cosine_warmup_50epochs.yaml  finetune.yaml
configs/model/: anch_12b_d512.yaml  motif_10b_d512.yaml  motif_12b_d512.yaml  motif_12b_d512_anchor.yaml  motif_12b_d512_full_att.yaml  motif_12b_d512_legacy.yaml  motif_12b_d512_rope.yaml  motif_12b_d768.yaml  motif_ds_12b_d256.yaml  motif_ds_12b_d384.yaml  motif_ds_12b_d512.yaml  motif_ds_16b_d256.yaml  motif_ds_8b_d768.yaml  motif_sum_12b_d512.yaml  perceiver_12b_d512_n256.yaml  perceiver_12b_d512_n512.yaml  transformer_12b_d512.yaml  unet_0_12_d512.yaml  unet_44_d256.yaml  unet_44_d512.yaml
configs/paths/: cleps.yaml  example.yaml  jz.yaml  jz_regular.yaml  local.yaml
configs/setup/: cleps_4xgpu.yaml  cleps_cpu.yaml  example.yaml  jz_16xa100.yaml  jz_16xh100.yaml  jz_16xv100.yaml  jz_16xv100_2h.yaml  jz_16xv100_32g.yaml  jz_16xv100_32g_dev.yaml  jz_16xv100_3h.yaml  jz_16xv100_dev.yaml  jz_32xh100.yaml  jz_32xv100.yaml  jz_32xv100_32g.yaml  jz_32xv100_32g_dev.yaml  jz_32xv100_dev.yaml  jz_4xa100.yaml  jz_4xa100_dev.yaml  jz_4xh100.yaml  jz_4xh100_dev.yaml  jz_4xv100_32g.yaml  jz_64xv100_32g.yaml  jz_8xa100_dev.yaml  jz_8xh100.yaml  jz_8xv100_32g.yaml  jz_a100.yaml  jz_cpu.yaml  jz_cpu_60min.yaml  jz_cpu_visu.yaml  jz_h100.yaml  jz_h100_dev.yaml  jz_v100.yaml  jz_v100_32g.yaml  jz_v100_32g_dev.yaml  local.yaml
configs/sources/: 37GHz_radar.yaml  37GHz_radar_colocated.yaml  era5.yaml  era5_pmw.yaml  era5_pmw_ir.yaml  era5_pmw_ir_radar.yaml  era5_pmw_ir_sar.yaml  era5_pmw_sar.yaml  gmi_radar.yaml  (+3 more)
notebooks/: gpm.ipynb  pmw_distribution.ipynb  preprocessed.ipynb  sar.ipynb  sources.ipynb  tc_primed.ipynb
preproc/: compute_normalization_constants.py  train_val_test_split.py
scripts/: eval.py  make_predictions.py  train.py
(+108 files in other folders)
