[project]
name = "motif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "boto>=2.49.0",
    "boto3>=1.42.10",
    "bottleneck>=1.6.0",
    "dask>=2025.12.0",
    "fsspec>=2025.12.0",
    "global-land-mask>=1.0.0",
    "haversine>=2.9.0",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyresample>=1.35.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "xarray>=2025.12.0",
]

